--- a/.github/workflows/google_scholar_crawler.yaml
+++ b/.github/workflows/google_scholar_crawler.yaml
@@ -27,3 +27,5 @@ jobs:
         git push "${remote_repo}" HEAD:google-scholar-stats --force
       env: 
         GOOGLE_SCHOLAR_ID: ${{ secrets.GOOGLE_SCHOLAR_ID }}
+        GITHUB_USERNAME: sunnynexus
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
